# Chess

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt  train.py
model/: Makefile  ckpt-convert.py  convert.py  convert.slurm  environment.slurm  heuristic-self-play.slurm  rl-training.slurm  save.py  train.py  train.slurm  transfer.py  util.py
src/: args.rs  bishop.rs  cache.rs  chess_ai.rs  game.rs  king.rs  knight.rs  main.rs  model.rs  pawn.rs  piece.rs  player.rs  queen.rs  rook.rs
