[package]
name = "chess"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = "2.0.0"
tensorflow = { version = "0.20.0" }
rand = "0.8.5"
clap = { version = "4.2.1", features = ["derive"] }
rayon = "1.7.0"
# tch = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html